@@ -12,7 +12,7 @@ BASE_SOURCE_FILES   = fwknopd.h config_init.c config_init.h \
                       fw_util_iptables.c fw_util_iptables.h \
                       fw_util_ipfw.c fw_util_ipfw.h \
                       fw_util_pf.c fw_util_pf.h cmd_opts.h \
-                      extcmd.c extcmd.h
+                      extcmd.c extcmd.h cmd_cycle.c cmd_cycle.h
 
 fwknopd_SOURCES   = fwknopd.c $(BASE_SOURCE_FILES)
 
