@@ -38,6 +38,7 @@
 #include "pcap_capture.h"
 #include "process_packet.h"
 #include "fw_util.h"
+#include "cmd_cycle.h"
 #include "log_msg.h"
 #include "fwknopd_errors.h"
 #include "sig_handler.h"
@@ -331,10 +332,10 @@ pcap_capture(fko_srv_options_t *opts)
         else
             pcap_errcnt = 0;
 
-        /* Check for any expired firewall rules and deal with them.
-        */
         if(!opts->test)
         {
+            /* Check for any expired firewall rules and deal with them.
+            */
             if(rules_chk_threshold > 0)
             {
                 opts->check_rules_ctr++;
@@ -346,6 +347,10 @@ pcap_capture(fko_srv_options_t *opts)
             }
             check_firewall_rules(opts, chk_rm_all);
             chk_rm_all = 0;
+
+            /* See if any CMD_CYCLE_CLOSE commands need to be executed.
+            */
+            cmd_cycle_close(opts);
         }
 
 #if FIREWALL_IPFW
