@@ -1,0 +1,8 @@
+SOURCE                  ANY
+KEY_BASE64              wzNP62oPPgEc+kXDPQLHPOayQBuNbYUTPP+QrErNDmg=
+HMAC_KEY_BASE64         Yh+xizBnl6FotC5ec7FanVGClRMlsOAPh2u6eovnerfBVKwaVKzjGoblFMHMc593TNyi0dWn4opLoTIV9q/ttg==
+FW_ACCESS_TIMEOUT       3
+#CMD_CYCLE_OPEN          /some/cmd/to/execute -with -args test test
+CMD_CYCLE_OPEN          /usr/bin/touch /tmp/cmdcycle.test
+CMD_CYCLE_CLOSE         /some/closecmd/to/execute -test
+CMD_CYCLE_TIMER		2
